# nickberg-terminal

./: .dockerignore  .env.example  .gitignore  ASYNC_SCRAPER_USAGE.md  DEPLOY_TO_CLOUD.md  Dockerfile  IMPROVEMENTS.md  IMPROVEMENTS_IMPLEMENTED.md  INTEGRATION_COMPLETE.md  OPENBB_API_INTEGRATION_SUMMARY.md  OPENBB_INTEGRATION.md  README.md  demo.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run-scraper.sh
.github/workflows/: ci.yml
config/: settings.yaml
src/: alerts.py  async_scraper.py  backtester.py  company_extractor.py  config_validator.py  correlation_analyzer.py  database.py  logging_config.py  main.py  market_data.py  ml_detector.py  models.py  pattern_detector.py  scraper.py
tests/: __init__.py  conftest.py  test_alert_aggregation.py  test_alerts.py  test_backtester.py  test_company_extractor.py  test_config_validator.py  test_market_data.py  test_ml_detector.py  test_pattern_detector.py  test_preferences_api.py  test_scraper.py  test_web_api.py
web/: app.py
web/static/: manifest.json
web/static/css/: bloomberg-theme.css  mobile.css  style.css
web/static/js/: DASHBOARD_MODIFICATIONS.md  INTEGRATION_GUIDE.md  bluesky-loader-optimized.js  dashboard-debug.js  dashboard.js  mobile-dashboard.js  service-worker.js  test-econ-calendar.html
web/templates/: bloomberg-dashboard.html  index.html  mobile.html
