[project]
name = "nickberg-terminal"
version = "0.1.0"
description = "A news monitoring bot that detects patterns in company coverage"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict= parameter
    "F401",   # unused imports (will fix incrementally)
    "F841",   # unused local variables (will fix incrementally)
    "UP035",  # deprecated typing imports (List -> list, Dict -> dict) - fix incrementally
    "W291",   # trailing whitespace in strings (SQL)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "B007", "F811"]  # Allow assert in tests, unused loop vars, redefinitions
"demo.py" = ["F401"]  # Demo file may have unused imports

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true
# Be lenient - report errors as warnings only
warn_unreachable = false
no_implicit_optional = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
